tests/suite/snapshots/suite__parse__tests__parse__group_of_anonymous01_19_4.xi.snap
---
source: tests/suite/parse.rs
expression: Snapshot(program)
---
Error: Syntactic error
   ╭─[tests/parse/group_of_anonymous01_19_4.xi:2:3]
   │
 2 │   return(a);
   ·   ───┬──  
   ·      ╰──── Unexpected token
───╯

